--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,6 @@ bevy = {version = "0.13.0", features = ["multi-threaded"]}
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 async-compat = "0.2.1"
+
+[target.'cfg(target_arch = "aarch64")'.dependencies]
+async-compat = "0.2.1"
